# WhisperAttackAPI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  README.md  README_FIRST.txt  Set ElevenLabs API Key.cmd  Set STT API Key.cmd  TODO.md  VAIVOX - VA Profile.vap  build_api_only.cmd  build_exe.ps1  build_full.cmd  build_plugin.ps1  configuration.py  fuzzy_word.jsonl  pyproject.toml  requirements-api.txt  settings.cfg  transcription_postprocess.py  whisper_attack.py  whisper_server.py  word_mapping.jsonl  word_mappings.txt
.claude/skills/vaivox-debug/: SKILL.md
.github/workflows/: ci.yml
docs/: AI_ATC_EXAMPLE_CALLS.md  AUDIT_FIX_TASKS.md  MIGRATION_PLAN.md  RELEASE.md  RETURN_CHANNEL_E2E_RUNBOOK.md  RETURN_CHANNEL_PLAN.md  SECURITY_MODEL.md  VAICOM_F10_EXECUTION_CONTRACT.md
docs/adr/: 0001-hexagonal-architecture-without-heavy-ddd.md  0002-clean-separation-product-identity.md  0003-rebrand-to-vaivox.md  0004-vocabulary-structured-format-and-governance.md  0005-no-redistribution-of-vaicom-derived-data.md  0006-telemetry-via-plugin-return-channel.md  0007-tooling-build-and-ci-standard.md  0008-test-and-evaluation-strategy.md  0009-vocabulary-reload-model.md  0010-runtime-introspection-api-for-agents.md  0011-conservative-phrase-snap.md  0012-command-surfaces-and-typed-dispatch.md  README.md
plugin/: VaivoxVAPlugin.sln
plugin/VaivoxPluginInstaller/: Program.cs  VaivoxPluginInstaller.csproj  app.manifest
plugin/VaivoxVAPlugin/: README.md  VaivoxVAPlugin.cs  VaivoxVAPlugin.csproj
plugin/VaivoxVAPlugin.Tests/: BuildReplyTests.cs  DecideTests.cs  GoldenVectors.cs  VaivoxVAPlugin.Tests.csproj
src/vaivox/: __init__.py  composition.py  main.py  mcp_main.py
src/vaivox/application/: __init__.py  add_vocabulary.py  learn_from_outcome.py  ports.py  queries.py  reconcile_text.py  record_command.py  refresh_vocabulary.py  shutdown.py  usage_stamping.py  vocabulary_commands.py
src/vaivox/domain/: __init__.py
src/vaivox/domain/commands/: __init__.py  model.py  resolver.py
src/vaivox/domain/plugin/: __init__.py  model.py
src/vaivox/domain/reconciliation/: __init__.py  fuzzy.py  model.py  normalization.py  numbers.py  pipeline.py  snapper.py  spelled_codes.py
src/vaivox/domain/shared/: __init__.py
src/vaivox/domain/telemetry/: __init__.py  model.py
src/vaivox/domain/vocabulary/: __init__.py  governor.py  keyterms.py  learning.py  model.py
src/vaivox/infrastructure/: __init__.py  system_clock.py
src/vaivox/infrastructure/api/: __init__.py  introspection.py  mcp_server.py
src/vaivox/infrastructure/audio/: __init__.py  recorder.py
src/vaivox/infrastructure/config/: __init__.py  identity.py  keyterms.py  settings.py
src/vaivox/infrastructure/dcs/: __init__.py  hook_installer.py  menu_listener.py
src/vaivox/infrastructure/inbound/: __init__.py  control_server.py
src/vaivox/infrastructure/kneeboard/: __init__.py  sink.py
src/vaivox/infrastructure/reload/: __init__.py  command_surface_resolver.py  idle_gated.py  phrase_snapper.py
src/vaivox/infrastructure/stt/: __init__.py  deepgram.py  elevenlabs.py  factory.py  faster_whisper.py  http_utils.py  keyterms.py  openai.py  prompts.py
src/vaivox/infrastructure/telemetry/: __init__.py  jsonl_reader.py  jsonl_sink.py  null_sink.py
src/vaivox/infrastructure/ui/: __init__.py  app.py  commands_window.py  settings.py  theme.py  word_mappings.py  writer.py
src/vaivox/infrastructure/vocabulary/: __init__.py  command_catalog.py  jsonl_repository.py  legacy_files.py  migration.py  mission_f10.py  phrase_index.py  reconciliation_vocabulary.py  repository_provider.py  vaicom_action_aliases.py  vaicom_generator.py  vaicom_generator_core.py  vaicom_keyterms.py
src/vaivox/infrastructure/voiceattack/: __init__.py  dispatcher.py  dynamic_patterns.py  protocol.py  sink.py  vaicom_f10_sink.py
stt_backends/: __init__.py  base.py  deepgram_backend.py  elevenlabs_backend.py  factory.py  faster_whisper_backend.py  http_utils.py  keyterms.py  openai_backend.py  prompts.py  vaicom_keyterms.txt
tests/: __init__.py  test_configuration.py  test_stt_backends.py  test_transcription_postprocess.py
tests/architecture/: __init__.py  test_layering.py
tests/contract/: match_protocol_vectors.json  test_stt_contract.py
tests/eval/: harness.py  test_mission_f10_surface_eval.py  test_reconciliation_eval.py  vaicom_mock.py
tests/eval/fixtures/: baseline.json  commands.txt  golden.jsonl  mission_f10_live_menu.txt  mission_f10_surface_cases.jsonl  vocab.json
tests/integration/: __init__.py  test_introspection_api.py  test_learning_loop.py  test_record_command_flow.py  test_voiceattack_sink_return_channel.py
tests/unit/: __init__.py  test_add_word_mapping.py  test_audio_recorder.py  test_command_dispatcher.py  test_command_surface_resolver.py  test_commands_window.py  test_composition_snapper.py  test_composition_telemetry.py  test_composition_vocabulary.py  test_config_settings.py  test_configuration.py  test_control_server.py  test_dcs_hook_installer.py  test_elevenlabs_backend.py  test_identity.py  test_introspection_queries.py  test_jsonl_telemetry_reader.py  test_jsonl_telemetry_sink.py  test_jsonl_vocabulary_repository.py  test_keyterm_service.py  test_kneeboard_sink.py  test_learn_from_outcome.py  test_legacy_delegation.py  test_match_protocol.py  test_mcp_tools.py  test_menu_listener.py  test_mission_f10_vocabulary.py  test_package_smoke.py  test_phrase_index_loader.py  test_phrase_snapper.py  test_plugin_compatibility.py  test_reconciliation.py  test_reconciliation_vocabulary.py  test_refresh_vocabulary.py  test_reloadable_snapper.py  test_repository_vocabulary_provider.py  test_stt_backends.py  test_ui_writer.py  test_usage_stamping.py  test_vaicom_action_aliases.py  (+11 more)
tools/: generate_vaicom_keyterms.py  migrate_vocabulary.py
