#
# VAIVOX — project metadata, dependencies, and tooling configuration.
#
# This file is the single source for packaging (PEP 621, src/ layout) and for the
# quality gates defined in ADR-0007 (ruff, mypy, pytest+coverage, import-linter).
#
# IMPORTANT (Phase 1 scope): the strict gates target only the NEW `src/vaivox/`
# tree. The legacy amateur modules (`whisper_*.py`, `configuration.py`,
# `stt_backends/`, ...) are deliberately excluded / loosened so every gate is green
# without rewriting code that Phase 2+ will move. See the `extend-exclude` and the
# mypy `[[tool.mypy.overrides]]` blocks below.
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "vaivox"
version = "0.1.0"
description = "Turns push-to-talk speech into DCS radio commands via VoiceAttack 2 + VAICOM Community."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aigle_2" }]
keywords = ["dcs", "voiceattack", "vaicom", "speech-to-text", "push-to-talk"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
]

# Runtime dependencies for the API-backed transcription path (mirrors the former
# requirements-api.txt). The optional local faster-whisper backend lives in [full].
dependencies = [
    "ttkbootstrap",
    "keyboard",
    "pyperclip",
    "rapidfuzz",
    "sounddevice",
    "soundfile",
    "text2digits",
    "pystray",
    "pillow",
    "pid",
    "darkdetect",
    "wcwidth",
]

[project.optional-dependencies]
# Local, on-device speech-to-text (the former requirements.txt additions).
# Note: CUDA torch wheels need an extra index, e.g.
#   pip install "vaivox[full]" --extra-index-url https://download.pytorch.org/whl/cu126
full = [
    "torch",
    "faster-whisper",
    "transformers",
]
# Developer toolchain — the quality gates from ADR-0007.
dev = [
    "ruff==0.15.0",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov",
    "coverage",
    "import-linter>=2.0",
    "pre-commit>=3.7",
]

[project.scripts]
vaivox = "vaivox.main:main"

[project.urls]
Homepage = "https://github.com/Aigle-2/WhisperAttackAPI"

[tool.hatch.build.targets.wheel]
packages = ["src/vaivox"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (ADR-0007). Google-convention docstrings via the `D` rules.
# Scoped to the new tree; legacy modules are excluded until Phase 2 moves them.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    # Legacy application modules — refactored in Phase 2+, not yet held to the
    # new standard. Excluding them keeps lint/format green without churn. As modules
    # become thin shims (re-export only) they are removed from this list.
    "whisper_attack.py",
    "whisper_server.py",
    "word_mappings.py",
    "writer.py",
    "theme.py",
    "stt_backends",
    "tools",
    # Legacy tests moved verbatim under tests/unit/ (kept runnable, not reformatted).
    "tests/unit/test_configuration.py",
    "tests/unit/test_stt_backends.py",
    "tests/unit/test_transcription_postprocess.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (Google convention, see below)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are not held to the public-API docstring/annotation rules.
"tests/**" = ["D", "ANN"]

# ---------------------------------------------------------------------------
# Mypy — strict, scoped to src/vaivox (ADR-0007). Legacy modules are ignored and
# third-party libraries without stubs are silenced (forward-looking for Phase 2+).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/vaivox"]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "whisper_attack",
    "whisper_server",
    "word_mappings",
    "writer",
    "theme",
    "stt_backends.*",
    "tools.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ttkbootstrap.*",
    "sounddevice.*",
    "soundfile.*",
    "pystray.*",
    "rapidfuzz.*",
    "text2digits.*",
    "keyboard.*",
    "pid.*",
    "darkdetect.*",
    "pyperclip.*",
    "wcwidth.*",
    "PIL.*",
    "faster_whisper.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage (ADR-0007 / ADR-0008 test pyramid).
# `pythonpath` exposes both the new package (src) and the legacy top-level
# modules (.) so tests run without an editable install.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"

[tool.coverage.run]
source = ["vaivox"]
branch = true

[tool.coverage.report]
show_missing = true
# No fail_under during Phase 1 — the src/vaivox tree is intentionally empty.

# ---------------------------------------------------------------------------
# import-linter — encodes ADR-0001's dependency rule (dependencies point inward).
# Passes on the empty tree; fails CI the moment a layer imports outward.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "vaivox"

[[tool.importlinter.contracts]]
name = "Hexagonal layering: dependencies point inward"
type = "layers"
layers = [
    "vaivox.infrastructure",
    "vaivox.application",
    "vaivox.domain",
]

[[tool.importlinter.contracts]]
name = "Domain depends on nothing outward"
type = "forbidden"
source_modules = ["vaivox.domain"]
forbidden_modules = [
    "vaivox.application",
    "vaivox.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Application must not import infrastructure"
type = "forbidden"
source_modules = ["vaivox.application"]
forbidden_modules = ["vaivox.infrastructure"]
