#
# VAIVOX — project metadata, dependencies, and tooling configuration.
#
# This file is the single source for packaging (PEP 621, src/ layout) and for the
# quality gates defined in ADR-0007 (ruff, mypy, pytest+coverage, import-linter).
#
# The strict gates target the `src/vaivox/` tree. The only non-strict code left is
# `tools/` (the VAICOM generator + the one-shot vocabulary migration), excluded /
# loosened in the `extend-exclude` and mypy `[[tool.mypy.overrides]]` blocks below.
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "vaivox"
version = "0.9.6"
description = "Turns push-to-talk speech into DCS radio commands via VoiceAttack 2 + VAICOM Community."
readme = "README.md"
# Single supported Python: 3.12. Managed and pinned by uv (.python-version + uv.lock).
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Aigle_2" }]
keywords = ["dcs", "voiceattack", "vaicom", "speech-to-text", "push-to-talk"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

# Core runtime: the only deps the importable package + the pure domain need (and the
# only runtime deps the quality gates import). The GUI/audio/network adapters import
# their libraries lazily, so they live in the optional `app`/`full` extras below — a
# default `uv sync` (core + the dev group) is all the gates need.
dependencies = [
    "rapidfuzz==3.14.5",
    "text2digits==0.1.2",
]

[project.optional-dependencies]
# The desktop app runtime (GUI, audio capture, hotkeys, tray) — the former
# requirements-api.txt. Install with `uv sync --extra app`.
app = [
    "ttkbootstrap",
    "keyboard",
    "pyperclip",
    "sounddevice",
    "soundfile",
    "pystray",
    "pillow",
    "pid",
    "darkdetect",
    "wcwidth",
]
# Local, on-device speech-to-text on top of the app runtime (the former
# requirements.txt). Install with `uv sync --extra full`. CUDA torch wheels need the
# PyTorch index, e.g. `uv sync --extra full --index pytorch=https://download.pytorch.org/whl/cu126`.
full = [
    "vaivox[app]",
    "torch",
    "faster-whisper",
    "transformers",
]
# The MCP server adapter (ADR-0010): native agent tool access over the introspection
# query use cases. Install with `uv sync --extra mcp`. Imported lazily (see
# infrastructure/api/mcp_server.py) so the default gate sync stays dependency-light.
mcp = [
    "mcp>=1.0",
]

[project.scripts]
vaivox = "vaivox.main:main"
vaivox-mcp = "vaivox.mcp_main:main"

# Developer toolchain — the quality gates (ADR-0007). A PEP 735 dependency group, so
# `uv sync` installs it by default; it is NOT part of the published wheel's extras.
[dependency-groups]
dev = [
    "ruff==0.15.0",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov",
    "coverage",
    "import-linter>=2.0",
    "pre-commit>=3.7",
]
# The PyInstaller toolchain for `build_exe.ps1` (kept out of the default dev sync).
build = [
    "pyinstaller>=6",
]

[project.urls]
Homepage = "https://github.com/Aigle-2/WhisperAttackAPI"

[tool.hatch.build.targets.wheel]
packages = ["src/vaivox"]

# ---------------------------------------------------------------------------
# uv — single Python (see .python-version) and a reproducible universal lock.
# This is a Windows desktop app whose CI runs on Linux, so the lock is solved for
# just those two platforms; that also lets the heavy `full` extra (torch) resolve
# cleanly without macOS wheel gaps.
# ---------------------------------------------------------------------------
[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format (ADR-0007). Google-convention docstrings via the `D` rules.
# Scoped to the `src/vaivox/` tree; the `tools/` utility scripts are excluded.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    # `tools/` holds the VAICOM keyterm/phrase-index generator and the one-shot
    # vocabulary migration — utility scripts, not held to the new tree's standard.
    "tools",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (Google convention, see below)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are not held to the public-API docstring/annotation rules.
"tests/**" = ["D", "ANN"]

# ---------------------------------------------------------------------------
# Mypy — strict, scoped to src/vaivox (ADR-0007). The `tools/` scripts are ignored and
# third-party libraries without stubs are silenced.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/vaivox"]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tools",
    "tools.*",
]
ignore_errors = true
# `tools/` is gate-excluded and is not bundled into the frozen build, so the new tree
# imports it lazily/defensively (infrastructure/vocabulary/vaicom_generator.py); treat it
# as an untyped boundary rather than resolving it from the strict tree.
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ttkbootstrap.*",
    "sounddevice.*",
    "soundfile.*",
    "pystray.*",
    "rapidfuzz.*",
    "text2digits.*",
    "keyboard.*",
    "pid.*",
    "darkdetect.*",
    "pyperclip.*",
    "wcwidth.*",
    "PIL.*",
    "faster_whisper.*",
    "torch.*",
    "transformers.*",
    "mcp.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage (ADR-0007 / ADR-0008 test pyramid).
# `pythonpath` exposes the new package (src) and the repo root (.) so the `tools/`
# scripts import in tests without an editable install.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"

[tool.coverage.run]
source = ["vaivox"]
branch = true

[tool.coverage.report]
show_missing = true
# No fail_under during Phase 1 — the src/vaivox tree is intentionally empty.

# ---------------------------------------------------------------------------
# import-linter — encodes ADR-0001's dependency rule (dependencies point inward).
# Passes on the empty tree; fails CI the moment a layer imports outward.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "vaivox"

[[tool.importlinter.contracts]]
name = "Hexagonal layering: dependencies point inward"
type = "layers"
layers = [
    "vaivox.infrastructure",
    "vaivox.application",
    "vaivox.domain",
]

[[tool.importlinter.contracts]]
name = "Domain depends on nothing outward"
type = "forbidden"
source_modules = ["vaivox.domain"]
forbidden_modules = [
    "vaivox.application",
    "vaivox.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Application must not import infrastructure"
type = "forbidden"
source_modules = ["vaivox.application"]
forbidden_modules = ["vaivox.infrastructure"]
